--- a/Ubuntu_Srv/Vagrantfile
+++ b/Ubuntu_Srv/Vagrantfile
@@ -3,4 +3,6 @@
 
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
+  config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+  config.vm.provision :shell, path: "bootstrap.sh"
 end
